@@ -3,6 +3,11 @@
   * src/flash/amd_flash.c (urj_flash_amd_detect): Move the bus address range
     checks up to before we actually attempt to read/write the bus.
 
+  * src/flash/detectflash.c (urj_flash_detectflash): Do not always clobber the
+    error value when we could not find a flash.  If the lower layer logged an
+    error, then we probably want the user to see that rather than a generic
+    "flash not found".
+
 2010-09-27  Mike Frysinger  <vapier@gentoo.org>
 
   * data/analog/bf533/bf533: Drop brackets from ADDR and DATA signals to match
